--- a/backend/package.json
+++ b/backend/package.json
@@ -5,52 +5,60 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
+    "start-scheduler": "tsx src/workers/scheduler.worker.ts",
     "build": "tsc",
     "start": "node dist/index.js",
     "test": "jest",
     "lint": "eslint src --ext .ts",
     "format": "prettier --write \"src/**/*.ts\""
   },
-  "keywords": ["quiz", "buzzfeed", "yelling-ant", "api"],
+  "keywords": [
+    "quiz",
+    "buzzfeed",
+    "yelling-ant",
+    "api"
+  ],
   "author": "Yelling Ant",
   "license": "UNLICENSED",
   "dependencies": {
-    "express": "^4.18.2",
+    "aws-sdk": "^2.1491.0",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
-    "pg": "^8.11.3",
-    "pg-hstore": "^2.3.4",
-    "mongoose": "^8.0.3",
-    "multer": "^1.4.5-lts.1",
-    "sharp": "^0.33.0",
-    "aws-sdk": "^2.1491.0",
-    "joi": "^17.11.0",
-    "slugify": "^1.6.6",
-    "helmet": "^7.1.0",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
+    "ioredis": "^5.8.2",
+    "joi": "^17.11.0",
+    "js-yaml": "^4.1.0",
+    "mongoose": "^8.0.3",
     "morgan": "^1.10.0",
-    "compression": "^1.7.4",
-    "swagger-ui-express": "^5.0.0",
-    "js-yaml": "^4.1.0"
+    "multer": "^1.4.5-lts.1",
+    "pg": "^8.16.3",
+    "pg-hstore": "^2.3.4",
+    "sharp": "^0.33.0",
+    "slugify": "^1.6.6",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "@types/node": "^20.10.4",
-    "@types/multer": "^1.4.11",
-    "@types/pg": "^8.10.9",
-    "@types/morgan": "^1.9.9",
     "@types/compression": "^1.7.5",
-    "@types/swagger-ui-express": "^4.1.6",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/ioredis": "^4.28.10",
+    "@types/jest": "^29.5.11",
     "@types/js-yaml": "^4.0.9",
+    "@types/morgan": "^1.9.9",
+    "@types/multer": "^1.4.11",
+    "@types/node": "^20.10.4",
+    "@types/pg": "^8.10.9",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
     "eslint": "^8.55.0",
-    "prettier": "^3.1.1",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0",
     "jest": "^29.7.0",
-    "@types/jest": "^29.5.11"
+    "prettier": "^3.1.1",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0",
